--- a/app/src/main/res/layout/activity_contact_page.xml
+++ b/app/src/main/res/layout/activity_contact_page.xml
@@ -1,15 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.example.alexlily.chatapp.ContactPageActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#E6E6E6">
 
-    <TextView android:text="@string/contactTitle" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/contactTitle"/>
+    <TextView
+        style = "@style/contactPageTitle"
+        android:id="@+id/contactTitle"
+        android:text="@string/contactTitle"
+        />
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -20,6 +20,16 @@
             android:id="@+id/contactList"
             android:orientation="vertical">
         <!--Code will add contacts here        -->
+            <!--<Button-->
+                <!--style = "@style/contactPageEntry"-->
+                <!--android:layout_width = "match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="test"/>-->
+            <!--<Button-->
+                <!--style = "@style/contactPageEntry"-->
+                <!--android:layout_width = "match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="test"/>-->
         </LinearLayout>
 
     </ScrollView>
