--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        style = "@style/mainPageName"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/contactNameArea"
-        android:text="contact name"/>
+        android:text="contact name"
+        android:layout_weight="1"/>
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="8">
 
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -21,23 +24,23 @@
             <!--Code will add textViews-->
 
         </LinearLayout>
-
     </ScrollView>
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
         <EditText
             android:id="@+id/writeMessage"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
+            android:layout_weight="8"
             />
         <Button
             android:id="@+id/send"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2"
+            android:layout_weight="2"
             android:onClick="onClick"
             android:text="@string/send" />
 
